[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/enemies/Slime.gd" type="Script" id=1]

[sub_resource type="AtlasTexture" id=34]
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=38]
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
region = Rect2( 0, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=47]
region = Rect2( 37, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=48]
region = Rect2( 74, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=49]
region = Rect2( 111, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=50]
region = Rect2( 148, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=51]
region = Rect2( 185, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=52]
region = Rect2( 222, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=53]
region = Rect2( 259, 0, 37, 32 )

[sub_resource type="AtlasTexture" id=42]
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "left",
"speed": 8.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "up",
"speed": 8.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "explode",
"speed": 14.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "down",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=26]
radius = 9.0

[sub_resource type="CircleShape2D" id=27]
radius = 230.035

[sub_resource type="CircleShape2D" id=28]
radius = 35.0143

[sub_resource type="CircleShape2D" id=29]
radius = 30.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 54 )
animation = "left"
frame = 1
playing = true

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 26 )

[node name="VisionRange" type="Area2D" parent="."]
position = Vector2( 0, -7 )

[node name="VisionShape" type="CollisionShape2D" parent="VisionRange"]
shape = SubResource( 27 )

[node name="AggroRange" type="Area2D" parent="."]
position = Vector2( 0, -7 )

[node name="AggroShape" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource( 28 )

[node name="AttackPoint" type="Area2D" parent="."]
position = Vector2( 0, -7 )

[node name="AttackRange" type="CollisionShape2D" parent="AttackPoint"]
shape = SubResource( 29 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_VisionRange_body_exited"]
